--- a/projeto/app/src/main/res/values/strings.xml
+++ b/projeto/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="input_text_altura">Altura (metros)</string>
     <string name="input_text_peso">Peso (Kg)</string>
     <string name="btn_name_calcular">Calcular IMC</string>
+    <string name="btn_text_masculino">Masculino</string>
+    <string name="btn_text_feminino">Feminino</string>
 </resources>
